# chunking-toolkit

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  refactor.md
.github/workflows/: changelog.yml  ci.yml
tests/: conftest.py  test_example.py
